--- a/WPFSharp.Globalizer/WPFSharp.Globalizer/WPFSharp.Globalizer.csproj
+++ b/WPFSharp.Globalizer/WPFSharp.Globalizer/WPFSharp.Globalizer.csproj
@@ -68,35 +68,43 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base\EnhancedResourceDictionary.cs" />
-    <Compile Include="Base\IEnhanceResourceDictionary.cs" />
-    <Compile Include="Base\ILoadResourceDictionaries.cs" />
-    <Compile Include="Base\IManageResourceDictionaries.cs" />
-    <Compile Include="Base\ResourceDictionaryManagerBase.cs" />
+    <Compile Include="EnhancedResourceDictionary.cs" />
+    <Compile Include="IManageResourceDictionaries.cs" />
+    <Compile Include="ResourceDictionaryManagerBase.cs" />
+    <Compile Include="Controls\StyleSelectionMenuItem.xaml.cs">
+      <DependentUpon>StyleSelectionMenuItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\LanguageSelectionMenuItem.xaml.cs">
       <DependentUpon>LanguageSelectionMenuItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="AvailableStyles.cs" />
+    <Compile Include="Converters\LanguageToBoolConverter.cs" />
+    <Compile Include="FallBackResourceDictionary.cs" />
+    <Compile Include="StyleResourceDictionary.cs" />
+    <Compile Include="GlobalizationResourceDictionary.cs" />
     <Compile Include="GlobalizedResourceExtension.cs" />
     <Compile Include="GlobalizedApplication.cs" />
-    <Compile Include="Controls\LanguageSelectionUserControl.xaml.cs">
-      <DependentUpon>LanguageSelectionUserControl.xaml</DependentUpon>
+    <Compile Include="Controls\LanguageSelectionDropDownMenu.xaml.cs">
+      <DependentUpon>LanguageSelectionDropDownMenu.xaml</DependentUpon>
     </Compile>
     <Compile Include="GlobalizationManager.cs" />
     <Compile Include="Converters\KeyToResourceConverter.cs" />
     <Compile Include="Converters\LanguageNameConverter.cs" />
-    <Compile Include="Converters\LanguageToBoolConverter.cs" />
-    <Compile Include="ResourceDictionaryLoader.cs" />
     <Compile Include="Controls\RelayCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StyleManager.cs" />
-    <Compile Include="SupportedLanguages.cs" />
+    <Compile Include="AvailableLanguages.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\StyleSelectionMenuItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Controls\LanguageSelectionMenuItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\LanguageSelectionUserControl.xaml">
+    <Page Include="Controls\LanguageSelectionDropDownMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
