--- a/WPFSharp.Globalizer.MVVMExample/WPFSharp.Globalizer.MVVMExample.csproj
+++ b/WPFSharp.Globalizer.MVVMExample/WPFSharp.Globalizer.MVVMExample.csproj
@@ -112,6 +112,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="README.txt" />
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
