--- a/WPFSharp.Globalizer.Examples/WPFSharp.Globalizer.MVVMExample/WPFSharp.Globalizer.MVVMExample.csproj
+++ b/WPFSharp.Globalizer.Examples/WPFSharp.Globalizer.MVVMExample/WPFSharp.Globalizer.MVVMExample.csproj
@@ -191,7 +191,7 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\WPFSharp.Globalizer\WPFSharp.Globalizer\WPFSharp.Globalizer.csproj">
+    <ProjectReference Include="..\..\WPFSharp.Globalizer\WPFSharp.Globalizer.csproj">
       <Project>{715461e8-4e54-4993-80a8-8e72892135e0}</Project>
       <Name>WPFSharp.Globalizer</Name>
     </ProjectReference>
