--- a/WPFSharp.Globalizer/WPFSharp.Globalizer.csproj
+++ b/WPFSharp.Globalizer/WPFSharp.Globalizer.csproj
@@ -140,7 +140,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y "$(TargetPath)" "$(SolutionDir)WPFSharp.Globalizer.NuGet\lib\net40-client\</PostBuildEvent>
+    <PostBuildEvent>REM copy /Y "$(TargetPath)" "$(SolutionDir)WPFSharp.Globalizer.NuGet\lib\net40-client\</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
