--- a/NuGet/Package.nuspec
+++ b/NuGet/Package.nuspec
@@ -2,10 +2,10 @@
 <package >
   <metadata>
     <id>WPFSharp.Globalizer</id>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <title>WPFSharp.Globalizer</title>
-    <authors>J. Abram Barneck</authors>
-    <owners>J. Abram Barneck</owners>
+    <authors>Jared Barneck (Rhyous)</authors>
+    <owners>Jared Barneck (Rhyous)</owners>
     <description>A library for localizing WPF. Allows switching languages at run time.</description>
     <releaseNotes></releaseNotes>
     <summary>A library for localizing WPF. Allows switching languages at run time.</summary>
@@ -15,11 +15,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://github.com/rhyous/WPFSharp.Globalizer/blob/master/Fork%20and%20Contribute%20License.txt</licenseUrl>
     <copyright>Copyright Jared Barneck (Rhyous) 2015</copyright>
-    <!--<dependencies>
-        <group targetFramework="net40">
-          <dependency id="log4net" version="1.2.10" />
-        </group>
-    </dependencies>-->
     <references></references>
     <tags>WPF XAML Localization Globalization</tags>
   </metadata>
