Added DesignTimeResources.xaml to NuGet package

--- a/NuGet/WPFSharp.Globalizer.NuGet.csproj
+++ b/NuGet/WPFSharp.Globalizer.NuGet.csproj
@@ -169,6 +169,12 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Page Include="content\Properties\DesignTimeResources.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
