--- a/NuGet/Package.nuspec
+++ b/NuGet/Package.nuspec
@@ -23,4 +23,10 @@
     <file src="lib\" target="lib"  />
     <file src="tools\" target="tools" />
   </files>
+  <frameworkAssemblies>
+    <frameworkAssembly assemblyName="PresentationCore" />
+    <frameworkAssembly assemblyName="PresentationFramework" />
+    <frameworkAssembly assemblyName="System.Xaml" />
+    <frameworkAssembly assemblyName="WindowsBase" />
+  </frameworkAssemblies>
 </package>
